# ollama-rs

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  highlight.rs  main.rs  ollama.rs  tui.rs
