[package]
name = "oma"
description = "Ollama Messaging Assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
directories = "5"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
syntect = "5"
syntect-assets = "0.23"
textwrap = "0.16"
tokio-stream = "0.1"
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
whoami = "1.6.0"
